--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,17 @@ dependencies:
   cloud_firestore: ^0.13.5
   provider: ^4.1.1
   flutter_spinkit: ^4.1.2+1
+  flutter_speed_dial: ^1.2.5
+  flutter_launcher_icons: ^0.7.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: "lib/assets/bird.jpg"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
