--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="Aaroh's App"
         android:icon="@mipmap/ic_launcher">
+        <meta-data 
+            android:name="com.google.android.geo.API_KEY" 
+            android:value="{{AIzaSyA1IYVTXVBc4MYovEYPyFAVi59VPjGrbQI}}"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
