--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   flutter_speed_dial: ^1.2.5
   flutter_launcher_icons: ^0.7.5
+  google_maps_flutter: ^0.5.27+3
 
 dev_dependencies:
   flutter_test:
