--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   flutter_speed_dial: ^1.2.5
   flutter_launcher_icons: ^0.7.5
   google_maps_flutter: ^0.5.27+3
+  flutter_google_places: ^0.2.5
+  geocoder: ^0.2.1
+  geolocator: ^5.3.1
 
 dev_dependencies:
   flutter_test:
