--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_google_places: ^0.2.5
   geocoder: ^0.2.1
   geolocator: ^5.3.1
+  location: ^3.0.2
+  flutter_background_location: ^0.0.4
 
 dev_dependencies:
   flutter_test:
