--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^5.3.1
   location: ^3.0.2
   flutter_background_location: ^0.0.4
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
