add file/image functionality

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="Aaroh's App"
         android:icon="@mipmap/ic_launcher">
+        android:requestLegacyExternalStorage="true"
         <meta-data 
             android:name="com.google.android.geo.API_KEY" 
             android:value="AIzaSyCfWsNRHBmgDLf4OQ9quXdGtMNKxVwycXo"/>
