--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   location: ^3.0.2
   flutter_background_location: ^0.0.4
   flutter_swiper: ^1.1.6
+  google_fonts: ^1.1.0
+  animations: ^1.0.0+5
+  shared_preferences: ^0.5.7+3
+  firebase_storage: ^3.1.5
+  image_picker: ^0.6.6+4
+  settings_ui: ^0.3.0
+  file_picker: ^1.9.0+1
 
 dev_dependencies:
   flutter_test:
