--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,7 @@ dependencies:
   google_maps_flutter: ^0.5.27+3
   flutter_google_places: ^0.2.5
   geocoder: ^0.2.1
-  geolocator: ^5.3.1
   location: ^3.0.2
-  flutter_background_location: ^0.0.4
   flutter_swiper: ^1.1.6
   google_fonts: ^1.1.0
   animations: ^1.0.0+5
@@ -48,6 +46,7 @@ dependencies:
   image_picker: ^0.6.6+4
   settings_ui: ^0.3.0
   file_picker: ^1.9.0+1
+  flutter_cache_manager: ^1.2.2
 
 dev_dependencies:
   flutter_test:
